Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19995

Bug in qtcrashhandler (dumpsender.cpp)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.7.0-beta1
    • Qt Creator 4.6.0-rc1, Qt Creator 4.7.0-beta1
    • All Other Issues
    • None
    • Linux, Windows

    Description

      There is a bug in qtcrashhandler / dumpsender.cpp that makes it incompatible with f.i. backtrace.io.

      The bug is caused by the html boundary being incorrect. A boundary is created on the construction of QHttpMultiPart, but another boundary is used throughout the code.

      The fix is to either set the boundary in the m_httpMultiPart or to use the m_httpMultiPart.boundary() throughout the code instead of the 'static const QByteArray boundary = "12345cfdfzfsdfsdfassssaaadsd24324jxccxzzzzz98xzcz";'

      Attached is an attempt to fix the issue, for your convenience.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bubke Marco Bubke
            re@icd.no Rune Espeseth
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes