Breakpad: Use correct multipart boundary

Task-number: QTCREATORBUG-19995
Change-Id: I8a21364bb60f37258e7becea04d54ba7d20b0df9
Reviewed-by: Marco Bubke <marco.bubke@qt.io>